fixed the layout bug of bootstrap

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,13 @@ html, body {
     margin: 0;
     padding: 0;
 }
-
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+}
 
 #navbar {
     background-color: white;
@@ -60,13 +66,13 @@ box-shadow: 0px 3px 24px 7px rgba(140,132,140,0.83);
 }
 
 
-.content-session-a {
+.content-section-a {
     width: 100vw;
     height: 110vh;
     /*background:yellow;*/
     z-index: -50;
     /*opacity: 0.8;*/
-		padding-bottom: 10vh;
+		/*padding-bottom: 10vh;*/
 		/*display:flex;
 align-items: center;*/
 
@@ -94,28 +100,30 @@ height:auto;
 	left:0;
 	right:0;
 	text-align: center;
-
+margin: 0;
+padding: 0;
 	/*margin-top: 500px;*/
 }
 
 /*css triangle border*/
-.content-session-a:after {
+.content-section-a:after {
     content: '';
-    position: absolute;
     width: 0;
     height: 0;
-    bottom: -10vh;
+    bottom:-10vh;
     left: 0;
     border-style: solid;
     border-width: 3rem 50vw 0 50vw;
     border-color: transparent white  transparent white;
 		opacity: 0.8;
 		z-index: -50;
+		background-color: red;
+
 	}
 
-.content-session-b {
-	width: auto;
-	height: auto;
+.content-section-b {
+	width: 100vw;
+	height: 100vh;
 	background: white;
 	z-index: -50;
 	opacity: 0.8;
@@ -123,8 +131,44 @@ height:auto;
 align-items: center;
 }
 
+
+.content-section-c {
+	width: 100vw;
+	height: 100vh;
+	background: white;
+	z-index: -50;
+	opacity: 0.8;
+	display:flex;
+align-items: center;
+}
+
+.content-section-d{
+	/*max-width: 100vw;*/
+	position: relative;
+	/*width: 100vw;
+	height: 100vh;*/
+	z-index: -50;
+	opacity: 0.8;
+	display:flex;
+align-items: center;
+	background: white;
+	overflow: hidden;
+}
+
+
+.skill-text-div{
+
+	text-align: center;
+	display: flex;
+	width: 70vw;
+}
+
 .icon-div {
 text-align: center;
+display: flex;
+width: 70vw;
+
+justify-content:space-around;
 }
 
 
